--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "express-fileupload": "^1.1.6-alpha.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.2",
+    "@types/express-fileupload": "^1.1.0",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mongodb": "^3.3.8",
     "@types/mongoose": "^5.5.28",
-    "@types/socket.io": "^2.1.4"
+    "@types/socket.io": "^2.1.4",
+    "@types/uniqid": "^4.1.3"
   }
 }
